added RunScript page

--- a/ExtensionContent/index.html
+++ b/ExtensionContent/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" ng-href="{{topcoatCSS}}">
-	<link rel="stylesheet" href="{{mainCSS}}">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" ng-href="{{mainCSS}}">
     <script src="lib/angular.js"></script>
  	<script src="lib/CSInterface-4.0.0.js"></script>
     <script src="js/main.js"></script>
