--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="refresh" content="0;url=./ExtensionContent/">
 -->
         <script type="text/javascript">
-            window.location.href = "./ExtensionContent/"
+            window.location.href = "./ExtensionContent/index.html"
         </script>
     </head>
     <body></body>
